# zk_sudoku

./: .gitignore  Cargo.toml  Makefile  index.html
frontend/: index.html  package-lock.json  package.json  script.js  styles.css  webpack.config.js
frontend/src/: index.html  script.js
lib/: Cargo.toml
lib/src/: aligned.rs  lib.rs  sp1.rs  sudoku.rs
program/: Cargo.toml
program/src/: main.rs
script/: Cargo.toml
server/: Cargo.toml
server/src/: main.rs
sudoku/: Cargo.toml
sudoku/src/: lib.rs  sudoku.rs
