[package]
name = "lib"
version = "0.1.0"
edition = "2021"

[dependencies]
sp1-sdk = "5.0.0"
dotenv = "0.15.0"
bincode = "1.3.3"
serde = { version = "1.0.219", features = ["derive"] }
aligned-sdk = { git = "https://github.com/yetanotherco/aligned_layer", tag="v0.16.1" }
ethers = { version = "2.0", features = ["ws", "rustls"] }
tracing = "0.1.41"
hex = "0.4"

[build-dependencies]
sp1-build = "5.0.0"
