[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = "1.0"
sudoku = { path = "../sudoku" }
lib = { path = "../lib" }
env_logger = "0.11.8"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
